--- a/css/shared.css
+++ b/css/shared.css
@@ -27,6 +27,7 @@
 
 body {
   height: inherit;
+  background-color: var(--secondary-color);
   font-family: var(--primary-font);
 }
 .responsive-image {
